editor css overflow fix

--- a/src/editor.css
+++ b/src/editor.css
@@ -1,6 +1,7 @@
 
 .post-content.post-content-editor {
 	height: auto;
+	overflow: hidden;
 	line-height: 1;
 }
 .post-content-editor [contenteditable] {
